# advent2022

./: README.md  common.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py  d7.py  d8.py  d9.py  main.py  pyproject.toml
d1/: part1.py  part2.py
d2/: part1.py  part2.py
d3/: __init__.py  part1.py  part2.py
d4/: __init__.py  part1.py  part2.py
d5/: __init__.py  part1.py  part2.py
d6/: __init__.py
