[tool.poetry]
name = "advent2022"
version = "0.1.0"
description = ""
authors = ["Jamie Chang <jamie.cheng.chang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"
more-itertools = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py311']

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
